# PricingSystem

./: .editorconfig  .env.public-beta.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.public-beta.yml  start-dev.ps1  技术栈.md  方案.md
backend-python/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_server.py  start_server.bat
backend-python/app/: __init__.py  main.py
backend-python/docs/: CLEANUP_VERIFICATION_REPORT.md  DATABASE_CLEANUP_REPORT.md  ROBOTS_CHECK_SUMMARY.md  ROBOTS_TXT_COMPLIANCE.md  TAOBAO_CRAWLER_GUIDE.md  WEBSOCKET_STREAM_FIX.md
backend-python/runtime/: README.md
backend-python/scripts/: build_competitor_index.py
backend-python/src/: __init__.py
backend-python/tests/: TEST_REPORT.md  test_agent_collaboration.py  test_agent_run_log_stage.py  test_api_smoke.py  test_build_competitor_index.py  test_competitor_service.py  test_crewai_runtime.py  test_crypto_utils.py  test_data_analysis_agent.py  test_db_migrations.py  test_decision_service.py  test_dispatch_service.py  test_fenced_writer_tools.py  test_four_agent_flow.py  test_full_decision_flow.py  test_health_routes.py  test_integration_agents.py  test_internal_tasks_retry.py  test_internal_tasks_routes.py  test_llm_connectivity.py  test_market_intel_agent.py  test_market_tools.py  test_orchestration_market_card.py  test_quick_decision_flow.py  test_rabbitmq_async_models.py  test_rabbitmq_worker_service.py  test_resume_service.py  test_risk_control_agent.py  test_taobao_crawler.py  test_taobao_h5_provider.py  (+5 more)
(+412 files in other folders)
