[project]
name = "pricing-crew"
version = "0.1.0"
description = "CrewAI-based 4-agent pricing decision backend"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "crewai>=0.120.0",
  "crewai-tools>=1.11.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "pymysql>=1.1.1",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
